fix!: resolve issues with merge of diary-page to main
