# open-api/openapi-specs.json
@@ -72,6 +72,26 @@
       }
     },
     "/diary": {
+      "get": {
+        "operationId": "getAllDiaries",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          },
+          {
+            "cookie": []
+          }
+        ],
+        "tags": [
+          "Diary"
+        ]
+      },
       "post": {
         "operationId": "create",
         "parameters": [],
@@ -86,7 +106,7 @@
           "required": true
         },
         "responses": {
-          "200": {
+          "201": {
             "description": ""
           }
         },
@@ -106,6 +126,36 @@
     "/diary/{date}": {
       "delete": {
         "operationId": "deleteByDate",
+        "parameters": [
+          {
+            "name": "date",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "format": "date",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          },
+          {
+            "cookie": []
+          }
+        ],
+        "tags": [
+          "Diary"
+        ]
+      },
+      "get": {
+        "operationId": "getDiary",
         "parameters": [
           {
             "name": "date",
@@ -313,6 +363,10 @@
             "format": "date",
             "type": "string"
           },
+          "encryption": {
+            "example": "RSA",
+            "type": "string"
+          },
           "rating": {
             "example": 5,
             "maximum": 10,
@@ -322,7 +376,8 @@
         },
         "required": [
           "content",
-          "date"
+          "date",
+          "encryption"
         ],
         "type": "object"
       },
